Fix ~40 errors across 9 files (round 7)
by-version/index.md: Fixed JDK 25 LTS support date (2033+ not 2026-03), removed ZGC from JDK 9-10, removed Gen Shenandoah from JDK 21, fixed Record Patterns as final
by-version/jdk25/migration: Removed withdrawn String Templates, fixed deprecated ZGenerational flag
by-topic/core/arch: Fixed macOS AArch64 JEP 383->391, removed SVE as Apple Silicon opt, fixed Jie Fu org
by-topic/core/graalvm: Fixed C2 IR (Sea-of-Nodes not HIR->LIR), MaxInlineLevel 15 not 9, GraalVM JDK 21 baseline 2023 not 2024
by-topic/core/jvm: Added biased locking deprecation warning, JFR open-sourced in JDK 11
by-topic/core/enums: Removed fabricated enum deconstruction pattern syntax
by-topic/language: Fixed annotations JSR 308 version, syntax JEP numbers, Records preview JEP 359 not 395

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>